# ecom-operations

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  QUICK_DEPLOY.md  SESSION_SUMMARY.md  TASKS.md  deploy.sh  fulfillment_result.json  pyproject.toml  render.yaml  run_fulfillment.sh
.claude/agents/: api-integration-architect.md  coding_doc_meta_agent.md  educational-market-specialist.md  fulfillment-optimization-specialist.md  inventory-routing-specialist.md  project-coordination-specialist.md  python-systems-architect.md  quality-assurance-specialist.md  shipping-logistics-specialist.md  team-orchestration-protocol.md
.claude/commands/: README.md  prp-execute-adaptive.md
.claude/sessions/: current-session.md
.claude/templates/: prp-template.md
architecture/: fulfillment-system-architecture.md
data/orders/: fulfillment_6396689547572.json  label_1753978763861.json  order_12345.json  order_1753978763861.json  order_6396634300724.json  order_6396689547572.json
fulfillment/: CLAUDE.md  README.md  __init__.py  main.py  pyproject.toml
fulfillment-system/: .env.example  README.md  main.py  pyproject.toml
fulfillment-system/docker/: Dockerfile  docker-compose.yml
fulfillment-system/scripts/: setup_shopify_webhooks.py  test_shippo.py
fulfillment-system/src/fulfillment_system/: __init__.py  cli.py
fulfillment-system/src/fulfillment_system/api/: main.py  webhooks.py
fulfillment-system/src/fulfillment_system/core/: order_processor.py
fulfillment-system/src/fulfillment_system/integrations/: __init__.py  shippo.py  shopify.py
fulfillment-system/src/fulfillment_system/models/: schemas.py
fulfillment-system/src/fulfillment_system/services/: database.py  document_generator.py  shipping_service.py  simple_storage.py
fulfillment-system/src/fulfillment_system/utils/: config.py
fulfillment/routing/: ROUTING_STRATEGY.md
fulfillment/shippo/: __init__.py  client.py
fulfillment/shopify/: __init__.py  client.py  webhook_handler.py
fulfillment/utils/: __init__.py  config.py
prp/: fulfillment-system-prp.md
scripts/: CLAUDE.md  test_server.py
scripts/automation/: test_fulfillment_api.py
scripts/fulfillment/: CLAUDE.md  check_order_status.py  deploy_cloudflare_tunnel.md  deploy_railway.md  deploy_to_droplet.sh  get_todays_unfulfilled.py  nginx_config_example.conf  process_existing_orders.py  production_checklist.py  quick_deploy_ngrok.sh  setup_webhook.py  simple_droplet_setup.sh  sync_orders.py  sync_orders_cli.py  test_complete_fulfillment.py  test_fulfillment_api.py  test_fulfillment_update.py  test_real_orders.py  test_shippo_api.py  test_shippo_integration.py  test_webhook.py  test_webhook_signature.py  (+2 more)
specs/: fulfillment_system_spec.md
tests/: CLAUDE.md
(+3 files in other folders)
