[project]
name = "fulfillment-system"
version = "0.1.0"
description = "Grooved Learning Fulfillment Automation System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "reportlab>=4.0.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "celery>=5.3.0",
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "geopy>=2.4.0",
    "jinja2>=3.1.0",
    "httpx>=0.25.0",
    "backoff>=2.2.1",
]

[project.scripts]
fulfillment-system = "fulfillment_system.cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=23.12.0",
]
